tests/specs/ecosystem/gcch/libsch/0_1_0.test
gcch/libsch/0.1.0
-- deno.lock --

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Module not found "file://<tmpdir>/types/arrays".
    at file://<tmpdir>/src/predicates/arrays.ts:1:91

